Update main.py language

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -11,7 +11,7 @@
 <body>
 
 <nav class="navbar navbar-light" style="background-color: #e3f2fd;">
-  <a class="navbar-brand" href="#">Registration Form</a>
+  <a class="navbar-brand" href="#">Регистрация в AIC Бухгалтерия</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
