--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -11,26 +11,26 @@
 
 <form action="" method="post">
     <div class="form-group">
-        <label for="Fullname">Full name</label>
-        <input name="fullname" class="form-control" id="inputFullName" aria-describedby="emailHelp" placeholder="Enter full name">
-        <small id="fullName" class="form-text text-muted">Please enter your full name(First name and Last name)</small>
+        <label for="Fullname">Фамилия, Имя, Отчество</label>
+        <input name="fullname" class="form-control" id="inputFullName" aria-describedby="emailHelp" placeholder="Введите (Фамилию, Имя, Отчество)">
+        <small id="fullName" class="form-text text-muted">Пожалуйста введите полное имя(Фамилия, Имя, Отчество)</small>
   </div>
   <div class="form-group">
-        <label for="InputEmail">Email address</label>
-        <input name="email" class="form-control" id="InputEmail"  placeholder="Enter email">
-        <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+        <label for="InputEmail">Email:</label>
+        <input name="email" class="form-control" id="InputEmail"  placeholder="Введите email">
+        <small id="emailHelp" class="form-text text-muted">Мы никогда никому не передадим вашу электронную почту.</small>
   </div>
   <div class="form-group">
-    <label for="InputPassword">Password</label>
-    <input type="password" name="password1" class="form-control" id="InputPassword" placeholder="Password">
+    <label for="InputPassword">Пароль:</label>
+    <input type="password" name="password1" class="form-control" id="InputPassword" placeholder="Пароль">
   </div>
 
     <div class="form-group">
-    <label for="InputPassword2">Repeat Password</label>
-    <input type="password" name="password2" class="form-control" id="InputPassword2" placeholder="Repeat Password">
+    <label for="InputPassword2">Повтор пароля:</label>
+    <input type="password" name="password2" class="form-control" id="InputPassword2" placeholder="Повторите пароль">
 
     </div>
-  <button type="submit" class="btn btn-primary">Submit</button>
+  <button type="submit" class="btn btn-primary">Регистрация</button>
 
 
 </form>
