--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% block title %}Register System{% endblock %}
+{% block title %}AIC Бухгалтерия{% endblock %}
 
 {% block content %}
 
@@ -13,12 +13,12 @@
     <div class="form-group">
         <label for="Fullname">Фамилия, Имя, Отчество</label>
         <input name="fullname" class="form-control" id="inputFullName" aria-describedby="emailHelp" placeholder="Введите (Фамилию, Имя, Отчество)">
-        <small id="fullName" class="form-text text-muted">Пожалуйста введите полное имя(Фамилия, Имя, Отчество)</small>
+        <small id="fullName" class="form-text text-muted">Пожалуйста укажите свой статус (Индивидуальный предприниматель / Ремесленник)</small>
   </div>
   <div class="form-group">
         <label for="InputEmail">Email:</label>
         <input name="email" class="form-control" id="InputEmail"  placeholder="Введите email">
-        <small id="emailHelp" class="form-text text-muted">Мы никогда никому не передадим вашу электронную почту.</small>
+        <small id="emailHelp" class="form-text text-muted">Мы никогда никому не передадим вашу email.</small>
   </div>
   <div class="form-group">
     <label for="InputPassword">Пароль:</label>
