--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -18,7 +18,7 @@
   <div class="form-group">
         <label for="InputEmail">Email:</label>
         <input name="email" class="form-control" id="InputEmail"  placeholder="Введите email">
-        <small id="emailHelp" class="form-text text-muted">Мы никогда никому не передадим вашу email.</small>
+        <small id="emailHelp" class="form-text text-muted">Мы никогда никому не передадим ваш email.</small>
   </div>
   <div class="form-group">
     <label for="InputPassword">Пароль:</label>
