--- a/app/templates/contact.html
+++ b/app/templates/contact.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
    <body>
-      <h3 style = "text-align: center;">Форма обратной связи</h3>
+      <h3 style = "text-align: center;">Форма обратной связи AIC-Бухгалтерия</h3>
 		
       {% for message in form.name.errors %}
          <div>{{ message }}</div>
