--- a/app/templates/success.html
+++ b/app/templates/success.html
@@ -1,7 +1,25 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
-   <body>
-      <h3 style = "text-align: center;">Ваше сообщение было успешно отправлено!</h3>
-        
-    </body>
+<head>
+	<title>{{ title }}</title>
+	<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='dist/css/bootstrap.min.css') }}">
+	<link href="https://fonts.googleapis.com/css?family=Montserrat:300" rel="stylesheet">
+</head>
+<body>
+	<style type="text/css">
+		body{
+			font-family: 'Montserrat', sans-serif;
+		}
+	</style>
+
+	<div class="col-lg-12">
+		<div class="jumbotron">
+			<h1 class="display-4">Форма обратной связи</h1>
+			<p class="lead">Форма обратной связи AIC-Бухгалтерия</p>
+			{% if success %}
+				<p class="lead text-success">Ваше сообщение было успешно отправлено!</p>
+			{% endif %}
+		</div>
+	</div>
+</body>
 </html>
