--- a/app/templates/contact.html
+++ b/app/templates/contact.html
@@ -1,5 +1,9 @@
 <!doctype html>
 <html>
+    <head>
+        <title>{{ title }}</title>
+        <link href="https://fonts.googleapis.com/css?family=Montserrat:300" rel="stylesheet">
+    </head>
    <body>
       <h3 style = "text-align: center;">Форма обратной связи AIC-Бухгалтерия</h3>
 		
